--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -19,6 +19,7 @@
         </a>
       </div>
       <a href="{% url 'logout' %}" class="btn-logout">Logout</a>
+      <a href="{% url 'tool_list' %}" class="btn-logout" style="right: 150px;">My Tools</a>
       <div class="search-container">
         <form action="{% url 'search' %}" method="POST">
           {% csrf_token %}
