removing additonal options

--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -36,20 +36,12 @@
             </div>
             <div class="suggestion-wrap">
               <label class="suggestion-item">
-                <input type="checkbox" name="source" value="ap_news">
+                <input type="checkbox" name="source" value="calculator">
                 <span>AP News</span>
               </label>
               <label class="suggestion-item">
-                <input type="checkbox" name="source" value="cnn">
-                <span>CNN</span>
-              </label>
-              <label class="suggestion-item">
-                <input type="checkbox" name="source" value="bbc">
-                <span>BBC</span>
-              </label>
-              <label class="suggestion-item">
                 <input type="checkbox" name="source" value="wikipedia">
-                <span>Wikipedia</span>
+                <span>CNN</span>
               </label>
               <label class="suggestion-item">
                 <input type="checkbox" name="source" value="custom">
