--- a/django/user_info/templates/user_info/tool_form.html
+++ b/django/user_info/templates/user_info/tool_form.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/hamburger-menu.css' %}">
     <style>
         .form-section {
             margin-bottom: 30px;
@@ -92,8 +93,21 @@
                 </div>
             </a>
         </div>
-        <a href="{% url 'logout' %}" class="btn-logout">Logout</a>
-        <a href="{% url 'tool_list' %}" class="btn-logout" style="right: 150px;">Back to Tools</a>
+        <!-- Hamburger Menu -->
+        <div class="hamburger-menu">
+            <div class="hamburger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="menu-items">
+            <a href="{% url 'tool_list' %}">Back to Tools</a>
+            <a href="{% url 'search' %}">Search</a>
+            <a href="{% url 'logout' %}">Logout</a>
+            <button class="menu-close-btn">Close Menu</button>
+        </div>
+        <div class="menu-overlay"></div>
         
         <div class="form-container">
             <div style="margin-bottom: 20px;">
@@ -260,6 +274,7 @@
 
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/hamburger-menu.js' %}"></script>
     <script>
         // Add Bootstrap form classes
         $(document).ready(function() {
