--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -29,6 +29,7 @@
       </div>
       <div class="menu-items">
         <a href="{% url 'tool_list' %}">My Tools</a>
+        <a href="{% url 'apikey_list' %}">My API Keys</a>
         <a href="{% url 'logout' %}">Logout</a>
         <button class="menu-close-btn">Close Menu</button>
       </div>
