--- a/django/user_info/templates/search.html
+++ b/django/user_info/templates/search.html
@@ -28,10 +28,10 @@
         </div>
       </div>
       <div class="menu-items">
-        <a href="{% url 'tool_list' %}">My Tools</a>
-        <a href="{% url 'apikey_list' %}">My API Keys</a>
+        <a href="{% url 'tool_list' %}">Tools</a>
+        <a href="{% url 'apikey_list' %}">API Keys</a>
         <a href="{% url 'logout' %}">Logout</a>
-        <button class="menu-close-btn">Close Menu</button>
+        <button class="menu-close-btn">Close</button>
       </div>
       <div class="menu-overlay"></div>
       <div class="search-container">
