--- a/django/user_info/templates/user_info/apikey_list.html
+++ b/django/user_info/templates/user_info/apikey_list.html
@@ -191,9 +191,13 @@
                 </div>
             {% endif %}
             
+            <div class="alert alert-info" style="margin-top: 20px;">
+                <p>You can have a maximum of 3 API keys per account. {% if apikeys|length < 3 %}You currently have {{ apikeys|length }} key{{ apikeys|length|pluralize }}.{% else %}You have reached the maximum limit.{% endif %}</p>
+            </div>
+            
             <form method="post" action="{% url 'apikey_create' %}" style="margin-top: 20px;">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-create">Create New API Key</button>
+                <button type="submit" class="btn btn-create" {% if apikeys|length >= 3 %}disabled{% endif %}>Create New API Key</button>
             </form>
         </div>
     </div>
