minor positioning changes to ui

--- a/django/user_info/templates/user_info/tool_list.html
+++ b/django/user_info/templates/user_info/tool_list.html
@@ -77,7 +77,10 @@
             width: 100%;
             max-width: 1000px;
             z-index: 1;
-            position: relative;
+            position: absolute;
+            top: 150px;
+            left: 50%;
+            transform: translateX(-50%);
         }
         .btn-create {
             background: transparent;
