changing hover over color - menu items

--- a/django/user_info/templates/user_info/tool_list.html
+++ b/django/user_info/templates/user_info/tool_list.html
@@ -18,6 +18,10 @@
             color: white;
             text-decoration: none;
             margin-right: 20px;
+            transition: color 0.3s ease;
+        }
+        .nav-link:hover {
+            color: #4da6ff;
         }
         .nav-link span {
             border-bottom: 2px solid transparent;
