--- a/django/user_info/templates/user_info/tool_list.html
+++ b/django/user_info/templates/user_info/tool_list.html
@@ -18,6 +18,10 @@
             color: white;
             text-decoration: none;
             margin-right: 20px;
+            transition: color 0.3s ease;
+        }
+        .nav-link:hover {
+            color: #4da6ff;
         }
         .nav-link span {
             border-bottom: 2px solid transparent;
@@ -77,7 +81,10 @@
             width: 100%;
             max-width: 1000px;
             z-index: 1;
-            position: relative;
+            position: absolute;
+            top: 150px;
+            left: 50%;
+            transform: translateX(-50%);
         }
         .btn-create {
             background: transparent;
